# django_react_notes

./: README.md  package-lock.json  package.json  pyproject.toml
django_react_notes/: db.sqlite3  mongodb_utils.py
django_react_notes/api/: models.py  mongodb_utils.py  urls.py  views.py
django_react_notes/api/migrations/: 0001_initial.py
django_react_notes/django_react_notes/: asgi.py  settings.py  urls.py  wsgi.py
django_react_notes/frontend/: package-lock.json  package.json  vite.config.ts
django_react_notes/frontend/src/: App.css  App.tsx
django_react_notes/frontend/src/components/: AddButton.tsx  Header.tsx  ListItem.tsx
django_react_notes/frontend/src/pages/: NotePage.tsx  NotesListPage.tsx
django_react_notes/products/: models.py
django_react_notes/products/migrations/: 0001_initial.py  0002_product_summary.py
